fix: resolve Python formatting and gosec installation issues
- Format nlp/run_intents.py with black to fix code style linting error
- Remove duplicate gosec installation that was causing authentication failure
- Keep only the curl-based gosec v2.21.4 installation, remove go install line

This fixes:
1. 'Oh no! 💥 💔 💥 1 file would be reformatted' error
2. 'fatal: could not read Username for https://github.com' error for gosec@v2.18.2

--- a/.github/workflows/enhanced-ci.yml
+++ b/.github/workflows/enhanced-ci.yml
@@ -358,8 +358,7 @@ jobs:
             curl -sSfL https://raw.githubusercontent.com/securecodewarrior/gosec/master/install.sh | sh -s -- -b /usr/local/bin v2.21.4
             # Install cosign v2.4.1 for container signing
             curl -sSfL https://raw.githubusercontent.com/sigstore/cosign/main/install.sh | sh -s -- -b /usr/local/bin v2.4.1
-            # Also install via go for backup
-            go install github.com/securecodewarrior/gosec/v2/cmd/gosec@v2.18.2
+            # Note: gosec already installed via curl above, no need for go install
             echo "$HOME/go/bin" >> $GITHUB_PATH
             ;;
           "license-check")
