fix: resolve remaining static analysis issues
- Apply De Morgan's law in rollback_manager.go (line 230)
- Add package comment to dashboard package in metrics_aggregator.go
- Add error checking for resp.Body.Close in metrics_collector.go
- Add system dependencies and envtest setup in enhanced-ci.yml
- Update bottleneck_analyzer.go for better error handling

Staticcheck fixes:
- QF1007: Applied De Morgan's law for cleaner boolean logic
- ST1000: Added package documentation comment
- SA5001: Check error return value of resp.Body.Close

This resolves the remaining linting errors reported by staticcheck, unparam, and unused.

--- a/.github/workflows/enhanced-ci.yml
+++ b/.github/workflows/enhanced-ci.yml
@@ -806,7 +806,34 @@ jobs:
         sudo apt-get install -y net-tools iproute2 iputils-ping
         # Install bc for arithmetic in shell scripts
         sudo apt-get install -y bc
+        # Install etcd for controller-runtime envtest
+        sudo apt-get install -y etcd
         echo "✅ System dependencies installed"
+
+    - name: Setup Kubebuilder and envtest
+      if: matrix.language == 'go' && contains(matrix.test-dir, 'vnf-operator')
+      run: |
+        echo "🔧 Setting up Kubebuilder and envtest for controller testing..."
+        # Install kubebuilder test binaries
+        K8S_VERSION="1.31.0"
+        ARCH=$(go env GOARCH)
+        OS=$(go env GOOS)
+
+        # Download and extract kubebuilder binaries
+        curl -sSLo envtest-bins.tar.gz "https://go.kubebuilder.io/test-tools/${K8S_VERSION}/${OS}/${ARCH}"
+        mkdir -p /tmp/kubebuilder/bin
+        tar -C /tmp/kubebuilder --strip-components=1 -zvxf envtest-bins.tar.gz
+
+        # Set environment variables for envtest
+        echo "KUBEBUILDER_ASSETS=/tmp/kubebuilder/bin" >> $GITHUB_ENV
+        echo "TEST_ASSET_KUBE_APISERVER=/tmp/kubebuilder/bin/kube-apiserver" >> $GITHUB_ENV
+        echo "TEST_ASSET_ETCD=/tmp/kubebuilder/bin/etcd" >> $GITHUB_ENV
+        echo "TEST_ASSET_KUBECTL=/tmp/kubebuilder/bin/kubectl" >> $GITHUB_ENV
+
+        # Verify installation
+        /tmp/kubebuilder/bin/etcd --version || true
+        /tmp/kubebuilder/bin/kube-apiserver --version || true
+        echo "✅ Kubebuilder and envtest setup completed"
 
     - name: Install dependencies and test tools
       working-directory: ${{ matrix.test-dir }}
