fix: resolve all component build failures by fixing directory structures
- Fixed o2-client: moved main.go to cmd/client/ directory
- Fixed cn-dms: moved main.go to cmd/dms/ directory
- Fixed ran-dms: moved main.go to cmd/dms/ directory
- Updated Dockerfiles to use correct build paths
- All components now build successfully locally
- Follows Go best practices for cmd directory structure

This fixes the CI/CD 'Build all components' job failures

--- a/deploy/docker/o2-client/Dockerfile
+++ b/deploy/docker/o2-client/Dockerfile
@@ -58,7 +58,7 @@ WORKDIR /workspace/o2-client
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build \
     -ldflags='-w -s -extldflags "-static"' \
     -a -installsuffix cgo \
-    -o /workspace/o2-client-binary ./cmd/main.go
+    -o /workspace/o2-client-binary ./cmd/client/main.go
 
 # Stage 2: Runtime
 FROM alpine:3.22.1
