--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -20,7 +20,7 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_PREFIX: ghcr.io/${{ github.repository_owner }}
-  GO_VERSION: '1.24.7'
+  GO_VERSION: '1.22.10'
   COSIGN_EXPERIMENTAL: 1
 
 permissions:
@@ -40,26 +40,26 @@ jobs:
       matrix:
         component:
           - name: orchestrator
-            dockerfile: orchestrator/Dockerfile
-            context: orchestrator
+            dockerfile: deploy/docker/orchestrator/Dockerfile
+            context: .
           - name: vnf-operator
-            dockerfile: adapters/vnf-operator/Dockerfile
-            context: adapters/vnf-operator
+            dockerfile: deploy/docker/vnf-operator/Dockerfile
+            context: .
           - name: o2-client
-            dockerfile: o2-client/Dockerfile
-            context: o2-client
+            dockerfile: deploy/docker/o2-client/Dockerfile
+            context: .
           - name: tn-manager
-            dockerfile: tn/manager/Dockerfile
-            context: tn/manager
+            dockerfile: deploy/docker/tn-manager/Dockerfile
+            context: .
           - name: tn-agent
-            dockerfile: tn/agent/Dockerfile
-            context: tn/agent
+            dockerfile: deploy/docker/tn-agent/Dockerfile
+            context: .
           - name: cn-dms
-            dockerfile: cn-dms/Dockerfile
-            context: cn-dms
+            dockerfile: deploy/docker/cn-dms/Dockerfile
+            context: .
           - name: ran-dms
-            dockerfile: ran-dms/Dockerfile
-            context: ran-dms
+            dockerfile: deploy/docker/ran-dms/Dockerfile
+            context: .
 
     outputs:
       image-digest: ${{ steps.build.outputs.digest }}
@@ -75,7 +75,7 @@ jobs:
       uses: docker/setup-buildx-action@v5
       with:
         driver-opts: |
-          image=moby/buildkit:v0.15.1
+          image=moby/buildkit:v0.17.1
           network=host
 
     - name: Log in to Container Registry
@@ -116,7 +116,7 @@ jobs:
 
           cat > "$dockerfile_path" << 'EOF'
         # Multi-stage build for optimized image size
-        FROM golang:1.24.7-alpine AS builder
+        FROM golang:1.22.10-alpine AS builder
 
         # Install system dependencies
         RUN apk add --no-cache git ca-certificates tzdata
