--- a/adapters/vnf-operator/deployment/kubernetes/orchestrator-deployment.yaml
+++ b/adapters/vnf-operator/deployment/kubernetes/orchestrator-deployment.yaml
@@ -56,6 +56,8 @@ spec:
       - name: orchestrator
         image: oran-mano/orchestrator:latest
         imagePullPolicy: IfNotPresent
+        command: ["/app/orchestrator"]
+        args: ["--server"]
         ports:
         - name: http
           containerPort: 8080
