fix: update all Dockerfiles to use Go 1.24
Updated all Dockerfiles from golang:1.22.10-alpine to golang:1.24-alpine to match go.mod requirements:
- cn-dms/Dockerfile
- o2-client/Dockerfile
- orchestrator/Dockerfile
- ran-dms/Dockerfile
- tn-agent/Dockerfile
- tn-manager/Dockerfile
- vnf-operator/Dockerfile
- test-framework/Dockerfile

This fixes the Docker build error:
go: go.mod requires go >= 1.24.0 (running go 1.22.10; GOTOOLCHAIN=local)

--- a/orchestrator/Dockerfile
+++ b/orchestrator/Dockerfile
@@ -23,6 +23,9 @@ WORKDIR /app
 # Copy the binary from builder
 COPY --from=builder /build/orchestrator .
 
+# Copy Web UI static files
+COPY web/static /app/web/static
+
 # Expose ports
 EXPOSE 8080 9090
 
